--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,13 +65,14 @@ header {
 }
 
 #textos {
-  padding: 5rem;
-  padding-bottom: 8rem;
+  padding: 6rem;
+  padding-bottom: 7rem;
 }
 
 img {
-  padding-top: 4rem;
-  padding-bottom: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 4rem;
 }
 
 #nome {
