--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 42.5rem;
+  height: 100%;
   width: 100%;
   align-content: center;
   align-items: center;
@@ -65,18 +65,22 @@ header {
 }
 
 #textos {
-  padding: 6rem;
+  padding-left: 6rem;
+  padding-top: 6rem;
+  padding-right: 3rem;
   padding-bottom: 7rem;
+  max-height: 50%;
 }
 
 img {
   padding-top: 3rem;
   padding-bottom: 2rem;
   padding-left: 4rem;
+  width: 60%;
 }
 
 #nome {
-  width: 65%;
+  width: 40%;
   font-size: 3rem;
   text-align: center;
   background-color: rgba(250, 235, 215, 0.63);
@@ -85,7 +89,7 @@ img {
 }
 
 #situacao {
-  width: 65%;
+  width: 40%;
   font-size: 2.5rem;
   text-align: center;
   background-color: rgba(250, 235, 215, 0.63);
@@ -97,7 +101,7 @@ img {
   width: 100%;
   justify-content: center;
   align-items: flex-end;
-  padding-bottom: 8rem;
+  padding-bottom: 3rem;
 }
 
 #button {
