--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ header {
   font-size: 2rem;
 }
 
-#itens {
+#geral {
   background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -55,7 +55,7 @@ header {
   align-items: center;
 }
 
-#geral {
+#itens {
   display: flex;
   width: 100%;
   align-content: center;
@@ -69,18 +69,18 @@ header {
   padding-top: 6rem;
   padding-right: 3rem;
   padding-bottom: 7rem;
-  max-height: 50%;
+  max-height: 60%;
 }
 
 img {
   padding-top: 3rem;
   padding-bottom: 2rem;
-  padding-left: 4rem;
+  padding-left: 6rem;
   width: 60%;
 }
 
 #nome {
-  width: 40%;
+  width: 60%;
   font-size: 3rem;
   text-align: center;
   background-color: rgba(250, 235, 215, 0.63);
@@ -89,7 +89,7 @@ img {
 }
 
 #situacao {
-  width: 40%;
+  width: 60%;
   font-size: 2.5rem;
   text-align: center;
   background-color: rgba(250, 235, 215, 0.63);
@@ -133,4 +133,5 @@ footer {
   background-color: #b5a2c5;
   justify-content: center;
   font-size: 1rem;
+  font-style: none;
 }
