--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,105 +8,76 @@
 }
 
 body {
-  flex-wrap: wrap;
-  display: flex;
+  max-width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
   background-color: #b5a2c5;
-  width: 100%;
-  background-size: auto;
 }
 
-#audio {
-  align-items: flex-end;
+main {
+  background-image: url(../images/background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 header {
   background-color: #b5a2c5;
-  height: 10%;
-  width: 100%;
   text-align: center;
-  flex-wrap: wrap;
 }
 
-#titulo {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  color: rgb(50, 5, 59);
-  font-size: 4rem;
+header h1 {
+  font-size: 6rem;
+  padding: 1rem;
   text-shadow: 0.1rem 0.1rem #ffffff80;
   font-weight: bold;
 }
 
-#subtitulo {
-  background-color: #ffffff52;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  width: 100%;
-  font-size: 2rem;
-}
-
-#geral {
-  background-image: url("../images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-  width: 100%;
-  align-content: center;
-  align-items: center;
-}
-
-#itens {
-  display: flex;
-  width: 100%;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 5rem;
-}
-
-#textos {
-  padding-left: 6rem;
-  padding-top: 6rem;
-  padding-right: 3rem;
-  padding-bottom: 7rem;
-  max-height: 60%;
-}
-
-img {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
-  padding-left: 6rem;
-  width: 60%;
-}
-
-#nome {
-  width: 60%;
+header h2 {
   font-size: 3rem;
-  text-align: center;
-  background-color: rgba(250, 235, 215, 0.63);
-  padding: 2rem 2rem 0 2rem;
+  background-color: #ffffff52;
+  padding: 0.5rem;
+  text-shadow: 0.1rem 0.1rem #ffffff80;
   font-weight: bold;
 }
 
-#situacao {
-  width: 60%;
-  font-size: 2.5rem;
-  text-align: center;
-  background-color: rgba(250, 235, 215, 0.63);
+#img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 2rem;
+}
+
+#tipo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  font-weight: bold;
+  background-color: rgba(250, 235, 215, 0.63);
+  padding: 1rem;
+}
+
+#situacao {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: rgba(250, 235, 215, 0.63);
+  padding: 0 2rem 2rem 2rem;
+  text-align: center;
 }
 
 #botao {
   display: flex;
-  width: 100%;
+  align-items: center;
   justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 3rem;
+  padding: 2rem;
 }
 
 #button {
-  font-size: 3rem;
-  align-items: center;
   padding: 1rem;
   font-weight: 600;
   background-color: #88d4bb;
@@ -115,23 +86,17 @@ img {
   transition: all 0.5s ease-out;
   cursor: pointer;
   text-shadow: 0.1rem 0.1rem #ffffff80;
-  position: absolute;
-}
-
-#button:hover {
-  transform: scale(1.1);
-  box-shadow: 0px 0px 10px 1px #ffffff50;
+  font-size: 2rem;
+  align-items: center;
 }
 
 footer {
-  padding: 1rem;
-  align-items: center;
-  display: flex;
-  width: 100%;
-  min-height: 5%;
   color: white;
   background-color: #b5a2c5;
-  justify-content: center;
-  font-size: 1rem;
-  font-style: none;
+  padding: 1rem;
+  text-align: center;
+}
+
+footer a {
+  text-decoration: none;
 }
