--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@ header h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 2rem 8rem 2rem 8rem;
 }
 
 #tipo {
